test/errors/macro2.input.asm
* = $801

!macro foo(a, b) {
    lda #a
    lda #b
}
    +bar(1, 2)
